// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TbirckInfobase
message TbirckInfobase
{	
	
	
	repeated TBirckInfoDefine TBirckInfo = 1; // TBirckInfo

}

// Defined in table: TBirckInfo
message TBirckInfoDefine
{	
	
	
	optional uint32 Id = 1; // ID
	
	
	optional int32 Brickid = 2; // 砖块id
	
	
	optional string Info = 3; // 血量-奖励分-积分-颜色
	
	
	optional int32 Bullet = 4; // 奖励子弹
	
	
	optional int32 Time = 5; // 触发倒计时
	
	
	optional int32 Type = 6; // 1普通2双倍积分3定时炸弹4炸弹5黑洞6火墙7冰冻8贯穿弹

}

