// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: RandomNameBase
message RandomNameBase
{	
	
	
	repeated TRandomNameDefine TRandomName = 1; // TRandomName

}

// Defined in table: TRandomName
message TRandomNameDefine
{	
	
	
	optional uint32 Id = 1; // 1
	
	
	optional string Male = 2; // 男性名
	
	
	optional string Female = 3; // 女性名

}

