// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: RechargeBase
message RechargeBase
{	
	
	
	repeated TRechargeDefine TRecharge = 1; // TRecharge

}

// Defined in table: TRecharge
message TRechargeDefine
{	
	
	
	optional uint32 Id = 1; // ID
	
	
	optional int32 Price = 2; // 价格

}

