// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TBirckItemBase
message TBirckItemBase
{	
	
	
	repeated TBirckItemDefine TBirckItem = 1; // TBirckItem

}

// Defined in table: TBirckItem
message TBirckItemDefine
{	
	
	
	optional uint32 Id = 1; // ID
	
	
	optional string Name = 2; // 名字
	
	
	optional int32 Num = 3; // 数量
	
	
	optional int32 Pro = 4; // 出现百分比

}

