// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TurntableBase
message TurntableBase
{	
	
	
	repeated TTurntableNewDefine TTurntableNew = 1; // TTurntableNew

}

// Defined in table: TTurntableNew
message TTurntableNewDefine
{	
	
	
	optional uint32 Id = 1; // 转盘ID
	
	
	optional string Nums = 2; // 转盘配置
	
	
	optional int32 Max = 3; // 最大

}

